# Cai-App

./: Autos.qml  CMakeLists.txt  Cai.qrc  Furnitures.qml  Main.qml  Overview.qml  Views.qml  common.js  main.cpp  qdevtools.cpp  qdevtools.h  qqrcode.cpp  qqrcode.h  qrsa.cpp  qrsa.h  qtquickcontrols2.conf
ZXing/libzueci/: zueci.h
android/: AndroidManifest.xml
components/: DatePicker.qml  List.qml  Popup.qml  Rounded.qml  RoundedFurniture.qml  TimePicker.qml  Touch.qml  VFit.qml
i18n/: qml_zh.ts
libs/ios/DynamsoftBarcodeReader.framework/_CodeSignature/: CodeResources
libs/ios/bridge.framework/: Info.plist  bridge
libs/ios/bridge.framework/Frameworks/DynamsoftBarcodeReader.framework/_CodeSignature/: CodeResources
libs/ios/bridge.framework/_CodeSignature/: CodeResources
libs/ios/dylib/: README.md  bridge.h  cmakelists.txt
libs/ios/framework/: bridge.m
libs/ios/framework/bridge.xcodeproj/: project.pbxproj
libs/ios/framework/bridge.xcodeproj/project.xcworkspace/xcuserdata/marketing.xcuserdatad/: UserInterfaceState.xcuserstate
libs/ios/framework/bridge.xcodeproj/xcshareddata/xcschemes/: bridge.xcscheme
libs/ios/framework/bridge.xcodeproj/xcuserdata/marketing.xcuserdatad/xcschemes/: xcschememanagement.plist
